--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -38,3 +38,18 @@ verify_jwt = false
 
 [functions.ask-metova]
 verify_jwt = false
+
+[functions.send-password-reset]
+verify_jwt = false
+
+[functions.verify-reset-token]
+verify_jwt = false
+
+[functions.delete-student-user]
+verify_jwt = false
+
+[functions.delete-officer-user]
+verify_jwt = false
+
+[functions.cleanup-orphan-users]
+verify_jwt = false
