--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/leaflet": "^1.9.21",
     "@types/papaparse": "^5.3.16",
     "axios": "^1.13.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
